fix: correct image spec in cronjob templates

--- a/helm-chart/sefaria-project/templates/cronjob/index-from-queue.yaml
+++ b/helm-chart/sefaria-project/templates/cronjob/index-from-queue.yaml
@@ -26,7 +26,7 @@ spec:
                 topologyKey: kubernetes.io.hostname
           containers:
           - name: index-from-queue
-            image: "{{ .Values.web.containerImage }}:{{ .Values.releaseImageTag }}"
+            image: "{{ .Values.web.containerImage.imageRegistry }}:{{ .Values.web.containerImage.tag }}"
             env:
             - name: REDIS_HOST
               value: "redis-{{ .Values.deployEnv }}"
