--- a/helm-chart/sefaria-project/templates/cronjob/nation-builder-sync.yaml
+++ b/helm-chart/sefaria-project/templates/cronjob/nation-builder-sync.yaml
@@ -22,7 +22,7 @@ spec:
                   path: local_settings.py
           containers:
           - name: nation-builder-sync
-            image: "{{ .Values.web.containerImage }}:{{ .Values.releaseImageTag }}"
+            image: "{{ .Values.web.containerImage.imageRegistry }}:{{ .Values.web.containerImage.tag }}"
             env:
             - name: REDIS_HOST
               value: "redis-{{ .Values.deployEnv }}"
