--- a/helm-chart/sefaria-project/templates/cronjob/sitemaps.yaml
+++ b/helm-chart/sefaria-project/templates/cronjob/sitemaps.yaml
@@ -28,7 +28,7 @@ spec:
 
           initContainers:
           - name: sitemap-generator
-            image: "{{ .Values.web.containerImage }}:{{ .Values.releaseImageTag }}"
+            image: "{{ .Values.web.containerImage.imageRegistry }}:{{ .Values.web.containerImage.tag }}"
             env:
             - name: REDIS_HOST
               value: "redis-{{ .Values.deployEnv }}"
