--- a/helm-chart/sefaria-project/templates/cronjob/topics-indexing.yaml
+++ b/helm-chart/sefaria-project/templates/cronjob/topics-indexing.yaml
@@ -17,7 +17,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: topics-indexer
-              image: "{{ .Values.web.containerImage }}:{{ .Values.releaseImageTag }}"
+              image: "{{ .Values.web.containerImage.imageRegistry }}:{{ .Values.web.containerImage.tag }}"
               args: [ "yes | pip3 install numpy && touch /log/sefaria_book_errors.log && python3 /app/scripts/recalculate_secondary_topic_data.py" ]
               env:
               - name: REDIS_HOST
