--- a/helm-chart/sefaria-project/templates/cronjob/regenerate-long-cached-data.yaml
+++ b/helm-chart/sefaria-project/templates/cronjob/regenerate-long-cached-data.yaml
@@ -15,7 +15,7 @@ spec:
         spec:
           containers:
           - name: regenerate
-            image: "{{ .Values.web.containerImage }}:{{ .Values.releaseImageTag }}"
+            image: "{{ .Values.web.containerImage.imageRegistry }}:{{ .Values.web.containerImage.tag }}"
             env:
             - name: REDIS_HOST
               value: "redis-{{ .Values.deployEnv }}"
