--- a/helm-chart/sefaria-project/templates/rollout/linker.yaml
+++ b/helm-chart/sefaria-project/templates/rollout/linker.yaml
@@ -59,6 +59,7 @@ spec:
             topologyKey: kubernetes.io/hostname
         nodeAffinity:
           {{- include "sefaria.nodeAffinities" . | nindent 10 }}
+      serviceAccountName: "{{ .Values.linker.serviceAccount }}"
       containers:
       - name: linker
         image: "{{ .Values.linker.containerImage.imageRegistry }}:{{ .Values.linker.containerImage.tag }}"
