fix: nationbuilder localsettings file mount

--- a/helm-chart/sefaria-project/templates/cronjob/nation-builder-sync.yaml
+++ b/helm-chart/sefaria-project/templates/cronjob/nation-builder-sync.yaml
@@ -16,7 +16,7 @@ spec:
           volumes:
           - name: local-settings
             configMap:
-              name: local-settings-{{ .Values.deployEnv }}
+              name: local-settings-file-{{ .Values.deployEnv }}
               items:
                 - key: local_settings.py
                   path: local_settings.py
