--- a/helm-chart/sefaria-project/templates/configmap/nginx.yaml
+++ b/helm-chart/sefaria-project/templates/configmap/nginx.yaml
@@ -131,6 +131,13 @@ data:
 
         {{- if .Values.linker.enabled }}
         location /api/find-refs/ {
+          proxy_send_timeout  300;
+          proxy_read_timeout  300;
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Forwarded-Proto https;
+          proxy_set_header X-Forwarded-Port 443;
           proxy_pass http://linker_upstream;
         }
         {{- end }}
