Fix (setting): local settings for GLOBAL_INTERRUPTING_MESSAGE should be on settings.py and not on local settings.py

--- a/helm-chart/sefaria-project/templates/configmap/local-settings-file.yaml
+++ b/helm-chart/sefaria-project/templates/configmap/local-settings-file.yaml
@@ -288,7 +288,7 @@ data:
     #     }
     # }
 
-    GLOBAL_INTERRUPTING_MESSAGE = None
+    # GLOBAL_INTERRUPTING_MESSAGE = None
 
     structlog.configure(
         processors=[
