fix: set correct release pipeline plugins

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Deploy to Production
+name: Release to Production
 on:
   workflow_dispatch: {}
 jobs:
@@ -7,5 +7,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: codfish/semantic-release-action@v2
+        with:
+          plugins:
+            - '@semantic-release/commit-analyzer'
+            - '@semantic-release/release-notes-generator'
+            - '@semantic-release/github'
+            - '@semantic-release/git'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
