fix: various improvements to workflow pipeline
- add username of release trigger to release info
- prevent commenting on PRs/issues
- explicitly use conventional-commits
- allow release to call production deployment

--- a/.github/workflows/production-deploy.yaml
+++ b/.github/workflows/production-deploy.yaml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_call: {}
 
 jobs:
   # Note - build occurs again here, even though this image has been built in continuous.
