--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -2,8 +2,7 @@ name: Helm Release
 
 on:
   push:
-    branches:
-      - master
+    paths: 'helm-chart/**/*'
 
 jobs:
 
@@ -36,7 +35,7 @@ jobs:
     if: |
       (github.repository == 'sefaria/sefaria-project') && (needs.changes.outputs.charts == 'true')
     steps:
-      - name: Checkout master
+      - name: Checkout
         uses: actions/checkout@v3
         with:
           # Fetch entire history. Required for chart-releaser; see https://github.com/helm/chart-releaser-action/issues/13#issuecomment-602063896
