--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: npm install conventional-changelog-conventionalcommits
       - uses: codfish/semantic-release-action@v2
         with:
           plugins: |
