--- a/.github/workflows/production-deploy.yaml
+++ b/.github/workflows/production-deploy.yaml
@@ -15,7 +15,19 @@ jobs:
   # This is because in continuous, the images are pushed to the dev registry
   # Logging in to dev and prod to push to both in continuous isn't really catered for
   # Since the build strategy is now a push instead of a pull, all images could live in a single registry, at which point this action would use cache and effectively just perform a tag
+  workflow-check:
+    outputs:
+      ref: ${{ steps.check.outputs.ref }}
+    steps:
+      - id: check
+        run: |
+          if [[ ${{ github.events.inputs.version }} == '' ]]; then
+            echo "::set-output name=ref::${{ github.ref_name }}" 
+          else
+            echo "::set-output name=ref::${{ github.events.inputs.version }}" 
+          fi
   build-generic:
+    needs: workflow-check
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -23,7 +35,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: "${{ if github.events.inputs.version == '' && github.ref_name || github.events.inputs.version }}"
+          ref: ${{ needs.workflow-check.outputs.ref }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -64,6 +76,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build-generic
+      - workflow-check
     steps:
       - uses: actions/checkout@v2
       - name: Set up QEMU
@@ -100,13 +113,15 @@ jobs:
           context: .
           push: true
           build-args: |
-            SRC_IMG=gcr.io/${{ secrets.PROD_GKE_PROJECT }}/sefaria-web:${{ if github.events.inputs.version == '' && github.ref_name || github.events.inputs.version }}
+            SRC_IMG=gcr.io/${{ secrets.PROD_GKE_PROJECT }}/sefaria-web:${{ needs.workflow-check.outputs.ref }}
           file: ./build/nginx/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
   prod-deploy:
     runs-on: ubuntu-latest
-    needs: build-asset
+    needs: 
+      - build-asset
+      - workflow-check
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -124,7 +139,7 @@ jobs:
       - name: Deploy Sandbox
         run: ./build/ci/production-helm-deploy.sh build/ci/production-values.yaml
         env:
-          GIT_COMMIT: "${{ if github.events.inputs.version == '' && github.ref_name || github.events.inputs.version }}"
+          GIT_COMMIT: "${{ needs.workflow-check.outputs.ref }}"
           PROJECT_ID: "${{ secrets.PROD_GKE_PROJECT }}"
           NAMESPACE: "${{secrets.PROD_GKE_NAMESPACE}}"
           CHART_VERSION: 0.0.27
