--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,11 @@ jobs:
             ]
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  verify:
+    runs-on: ubuntu-latest
+    needs: semantic-release
+    steps:
+      - run: echo ${{ needs.semantic-release.outputs.version }}
   deploy:
     needs: semantic-release
     uses: ./.github/workflows/production-deploy.yaml
