--- a/.github/workflows/production-deploy.yaml
+++ b/.github/workflows/production-deploy.yaml
@@ -23,7 +23,7 @@ jobs:
       - id: check
         run: |
           if [[ "${{ inputs.version }}" == "" ]]; then
-            echo "::set-output name=ref::${{ github.ref_name }}" 
+            echo "::set-output name=ref::v${{ github.ref_name }}" 
           else
             echo "::set-output name=ref::${{ inputs.version }}" 
           fi
