fix: add version tag to correct location

--- a/.github/workflows/production-deploy.yaml
+++ b/.github/workflows/production-deploy.yaml
@@ -23,9 +23,9 @@ jobs:
       - id: check
         run: |
           if [[ "${{ inputs.version }}" == "" ]]; then
-            echo "::set-output name=ref::v${{ github.ref_name }}" 
+            echo "::set-output name=ref::${{ github.ref_name }}" 
           else
-            echo "::set-output name=ref::${{ inputs.version }}" 
+            echo "::set-output name=ref::v${{ inputs.version }}" 
           fi
   build-generic:
     needs: workflow-check
