fix: explicitly pass semver to tag generator

--- a/.github/workflows/production-deploy.yaml
+++ b/.github/workflows/production-deploy.yaml
@@ -61,6 +61,7 @@ jobs:
             type=ref,event=tag
             type=sha,enable=true,priority=100,prefix=sha-,suffix=-${{ steps.date.outputs.date }},format=short
             type=sha
+            type=semver,patter={{version}},value=${{needs.workflow-check.outputs.ref}}
           flavor: |
             latest=true
       - name: build and push
@@ -106,6 +107,7 @@ jobs:
             type=ref,event=tag
             type=sha,enable=true,priority=100,prefix=sha-,suffix=-${{ steps.date.outputs.date }},format=short
             type=sha
+            type=semver,patter={{version}},value=${{needs.workflow-check.outputs.ref}}
           flavor: |
             latest=true
       - name: build and push
