--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -40,6 +40,8 @@ jobs:
         with:
           # Fetch entire history. Required for chart-releaser; see https://github.com/helm/chart-releaser-action/issues/13#issuecomment-602063896
           fetch-depth: 0
+      - name: create release rules
+        run: helm-chart/release-rules.sh 
       - uses: cycjimmy/semantic-release-action@v3
         id: semantic
         with:
