--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -1,10 +1,32 @@
-name: Helm Release
+name: Helm
 
 on:
-  push:
-    paths: 'helm-chart/**/*'
+  pull_request:
+    paths:
+      - "helm-chart/**"
+      - ".github/workflows/helm.yaml"
 
 jobs:
+  lint:
+    name: "Lint"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Helm
+        uses: azure/setup-helm@v1
+        with:
+          version: v3.5.0
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: Set up chart-testing
+        uses: helm/chart-testing-action@v2.2.1
+        with:
+          version: v3.5.1
+      - name: Lint chart
+        run: ct lint --charts helm-chart/sefaria-project
 
   changes:
     permissions:
@@ -25,6 +47,7 @@ jobs:
           filters: |
             charts:
               - 'helm-chart/**/*'
+
   chart:
     name: Release Chart
     runs-on: ubuntu-latest
@@ -32,6 +55,7 @@ jobs:
       contents: write # needed to write releases
     needs:
       - changes
+      - lint
     if: |
       (github.repository == 'sefaria/sefaria-project') && (needs.changes.outputs.charts == 'true')
     steps:
@@ -65,6 +89,8 @@ jobs:
         run: ./yq -i e '.version = "${{ steps.semantic.outputs.new_release_version }}"' helm-chart/sefaria-project/Chart.yaml
       - name: Update chart appVersion
         run: ./yq -i e '.appVersion = "${{ steps.appVersion.outputs.appVersion }}"' helm-chart/sefaria-project/Chart.yaml
+      - name: Upload Chart to release
+        r
       - name: Helm Chart Releaser
         uses: helm/chart-releaser-action@v1.4.0
         env:
