--- a/helm-chart/sefaria-project/templates/rollout/varnish.yaml
+++ b/helm-chart/sefaria-project/templates/rollout/varnish.yaml
@@ -86,6 +86,36 @@ spec:
         - mountPath: /etc/varnish/
           name: varnish-config
           readOnly: true
+        - mountPath: /var/lib/varnish
+          name: workdir
+      - image: ibmcom/varnish-metrics-exporter:0.28.1
+        imagePullPolicy: Always
+        name: metrics-exporter
+        ports:
+        - containerPort: 9131
+          name: metrics
+          protocol: TCP
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /
+            port: 9131
+            scheme: HTTP
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 30
+        resources:
+          requests:
+            cpu: 100m
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+        volumeMounts:
+        - mountPath: /var/lib/varnish
+          name: workdir
+          readOnly: true
+        - mountPath: /etc/varnish
+          name: varnish-config
+          readOnly: true
       volumes:
         - name: varnish-secret
           secret:
@@ -93,3 +123,5 @@ spec:
         - name:  varnish-config
           configMap:
             name: {{ .Values.deployEnv }}-varnish-config
+        - emptyDir: {}
+          name: workdir
