--- a/helm-chart/sefaria-project/values.yaml
+++ b/helm-chart/sefaria-project/values.yaml
@@ -213,6 +213,10 @@ varnish:
       # data:
       # Reference to an existing secret in the cluster
       ref:
+  monitoring:
+    enabled: false
+    image: ibmcom/varnish-metrics-exporter
+    tag: 0.32.0
 
 ingress:
  # You can set path: serviceName: and port: for each host. By default they are
